# asana-api-wrapper

./: .env.example  .gitignore  README.md  agents.md  llm_tools_openapi.yml  main.py  openapi.yml  pyproject.toml  test.md
examples/: project_with_tasks.json  tasks_only.json
src/: asana_mapping_generator.py  client.py  config.py  llm_tools.py  models.py  openapi_exporter.py  wrapper.py
src/cli/: cli.py
src/core/: HttpClient.py  asana_client.py  asana_mapping_generator.py  models.py  openapi_exporter.py  wrapper.py
src/web/: endpoints.py  openapi_exporter.py
